syntax = "proto3";

option go_package = "./generated";

import "pagination.proto";
import "annotations.proto";

message CreatePermissionRequest {
	uint32 resource_id = 2;
	optional uint32 resource_parent_id = 3;
	uint32 relation = 4;
	uint32 user_id = 5;
	optional uint32 group_id = 6;
}

message Permission {
	uint32 id = 1;
	uint32 resource_id = 2;
	uint32 resource_parent_id = 3;
	uint32 relation = 4;
	uint32 user_id = 5;
	uint32 group_id = 6;
	bool is_deleted = 7;
}

message CheckPermissionResponse {
	bool res = 1;
}

service PermissionService {
	rpc DeletePermission (ID) returns (Message) {
		option (google.api.http) = {
			delete: "/delete/{id}"
		};
	}

	rpc CreatePermission (CreatePermissionRequest) returns (Permission) {
		option (google.api.http) = {
			post: "/create"
			body: "*"
		};
	}

	rpc CheckPermission (CreatePermissionRequest) returns (CheckPermissionResponse) {
		option (google.api.http) = {
			post: "/check"
			body: "*"
		};
	}
}
